--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<link rel="stylesheet" media="screen" href="c/reset.css" />
 <link rel="stylesheet" media="screen" href="c/screen.css" />
 <title>T. B. Scott Library</title>
 </head>
@@ -10,17 +11,14 @@
 <div id="non-footer">
   <header>
   <!-- Logo -->
-<div id="function-links">
-  <ul>
+  <h1 id="site-title">T. B. Scott Free Library</h1>
+  <h2 id="site-subtitle">Contact Info, Hours, and Directions</h2>
+  <ul id="function-links">
     <li>Contacts/Hours/Directions</li>
     <li>Get a Library Card</li>
     <li>Calendar</li>
     <li>Reading Recommendations</li>
-    </ul>
-    </div> <!-- end function-links -->
-  <h1 id="site-title">T. B. Scott Free Library</h1>
-  <h2 id="site-subtitle">Contact Info, Hours, and Directions</h2>
-  
+  </ul> <!-- end function-links -->
   </header>
   <nav id="primary-nav">
   <ul>
@@ -37,39 +35,19 @@
 <!-- Note for CSS Layout - No margin and padding on the layout elements as much as possible - do that in the internals, so we can use % sizing -->
 
 <section id="hours">
-<p> Regular Hours: 
-<ul>
-<li>Mon - Thurs: 9:30 am - 8 pm</li>
-<li>Fri: 9:30 am - 6 pm</li>
-<li>Sat: 9:30 am - 4 pm</li>
-<li>Sun: Noon - 4:00 pm</li>
-</ul>
-</p>
-
 <p>T.B. Scott Library will be closed the following days: 
 Jan. 1, Jan. 2, Apr. 24, May 30, Jul. 4, Sep. 5, Nov. 23 at 5pm, Nov 24, Dec. 23-26.</p>
 
 <p>Summer hours begin May 27, 2011.</p>
-<p>Summer Hours: 
+<p>Summer Hours: </p>
 <ul>
 <li>Mon - Thurs: 9:30 am - 8 pm</li>
 <li>Fri: 9:30 am- 5 pm</li>
 <li>Sat: 9:30 am - 1 pm</li>
 <li>Closed Sunday</li>
 </ul>
-</p>
-</section>
 
-<section id="directions">
-        <section id="google-map"></section>
-        <section id="address"> T.B. Scott Library 106 W. First St.; Merrill, WI 54452
-        <p>Directions:</p>
-        <p>From north or south on Hwy 51 (I-39), take the Hwy 64 exit westward. Follow Hwy 64 through town about 2 miles. Hwy 64 joins with First St. just after the Prairie River Middle School. The Library will be on the right.</p>
-        <p>From east on Hwy 64: Follow Hwy 64 through town about 2 miles. Hwy 64 joins with First St. just after the Prairie River Middle School. The Library will be on the right.</p>
-        <p>From west on Hwy 64/107: Follow Hwy 64 (W. Main St.) It joins First St. at the Prairie River Bridge. At the bridge there is a three-way stop. Across the bridge on the left is the Library.</p>
-        </section>
-      </section>
-
+</section> <!-- end hours -->
 <section id="contact">
 <p>T.B. Scott Library's main phone number: 715-536-7191</p>
 
@@ -77,7 +55,7 @@ Library Staff:
 <ul>
 <li>Stacy Stevens, Director: <a href="mailto:stevens@wvls.lib.wi.us"> stevens@wvls.lib.wi.us</a></li>
 <li>Sandra Lussenhop, Outreach Services to seniors & the homebound: <a href="mailto:sluss@wvls.lib.wi.us">sluss@wvls.lib.wi.us </a> (or call 715-536-7191)</li>
-<li>Don Litzer, Assistant Director, Head of Adult Department: <a href="mailto: dlitzer@wvls.lib.wi.us">dlitzer@wvls.lib.wi.us</a> </li>
+<li>Don Litzer, Assistant Director, Head of Adult Department: <a href="mailto:dlitzer@wvls.lib.wi.us">dlitzer@wvls.lib.wi.us</a> </li>
 <li>Linda Schuster, Head of Youth Services Department: <a href="mailto:schuster@wvls.lib.wi.us">schuster@wvls.lib.wi.us</a> </li>
 <li>Donna Hertel, Supervisor of Reference and Interlibrary Loan: <a href="mailto:merrillreflib@yahoo.com">merrillreflib@yahoo.com</a></li>
 <li>Eleanor Schwartz, System Administrator, Circulation Coordinator: <a href="mailto:schwartz@wvls.lib.wi.us">schwartz@wvls.lib.wi.us</a></li>
@@ -85,7 +63,18 @@ Library Staff:
 <li>Michael Schroeder, Maintenance Supervisor: <a href="mschroed53@hotmail.com">mschroed53@hotmail.com</a> </li>
 </ul>
 
-</section>
+</section> <!-- end contact -->
+
+<section id="directions">
+        <section id="google-map"><iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=T+B+Scott+Free+Library,+106+W+1st+St,+Merrill,+Lincoln,+Wisconsin+54452-2310&amp;oe=utf-8&amp;client=firefox-a&amp;hl=en&amp;ie=UTF8&amp;geocode=Fc5gsQIdiDyn-g&amp;split=0&amp;sll=37.0625,-95.677068&amp;sspn=23.875,57.630033&amp;hq=&amp;hnear=T+B+Scott+Free+Library,+106+W+1st+St,+Merrill,+Wisconsin+54452-2310&amp;ll=45.179072,-89.703283&amp;spn=0.01815,0.025749&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=T+B+Scott+Free+Library,+106+W+1st+St,+Merrill,+Lincoln,+Wisconsin+54452-2310&amp;oe=utf-8&amp;client=firefox-a&amp;hl=en&amp;ie=UTF8&amp;geocode=Fc5gsQIdiDyn-g&amp;split=0&amp;sll=37.0625,-95.677068&amp;sspn=23.875,57.630033&amp;hq=&amp;hnear=T+B+Scott+Free+Library,+106+W+1st+St,+Merrill,+Wisconsin+54452-2310&amp;ll=45.179072,-89.703283&amp;spn=0.01815,0.025749&amp;z=14&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small></section>
+
+
+
+        <section id="address">
+        <p>T.B. Scott Library 106 W. First St.; Merrill, WI 54452</p>
+        </section>
+      </section> <!-- end directions -->
+
     </div> <!-- end content -->
 </div> <!-- end non-footer -->
 <footer>
