--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 <body>
 <div id="non-footer">
   <header>
-  <!-- Logo -->
-  <h1 id="site-title">T. B. Scott Free Library</h1>
-  <h2 id="site-subtitle">Contact Info, Hours, and Directions</h2>
   <ul id="function-links">
     <li>Contacts/Hours/Directions</li>
     <li>Get a Library Card</li>
     <li>Calendar</li>
     <li>Reading Recommendations</li>
   </ul> <!-- end function-links -->
+  <h1 id="site-title">T. B. Scott Free Library</h1>
+  <h2 id="site-subtitle">Contact Info, Hours, and Directions</h2>
   </header>
   <nav id="primary-nav">
   <ul>
@@ -35,53 +34,66 @@
 <!-- Note for CSS Layout - No margin and padding on the layout elements as much as possible - do that in the internals, so we can use % sizing -->
 
 <section id="hours">
-<p>T.B. Scott Library will be closed the following days: 
-Jan. 1, Jan. 2, Apr. 24, May 30, Jul. 4, Sep. 5, Nov. 23 at 5pm, Nov 24, Dec. 23-26.</p>
-
-<p>Summer hours begin May 27, 2011.</p>
-<p>Summer Hours: </p>
+<h2>Hours</h2>
+<h3>Regular hours:</h3>
 <ul>
-<li>Mon - Thurs: 9:30 am - 8 pm</li>
-<li>Fri: 9:30 am- 5 pm</li>
-<li>Sat: 9:30 am - 1 pm</li>
-<li>Closed Sunday</li>
+<li><em>Mon - Thurs:</em> 9:30am - 8pm</li>
+<li><em>Friday:</em> 9:30am- 6pm</li>
+<li><em>Saturday:</em> 9:30am - 4pm</li>
+<li><em>Sun:</em> Noon - 4pm</li>
 </ul>
 
-</section> <!-- end hours -->
-<section id="contact">
-<p>T.B. Scott Library's main phone number: 715-536-7191</p>
+<h3>T.B. Scott Library will be closed:</h3>
+<p>January 1-2, April 24, May 30, July 4, September 5, November 23 at 5pm and 24, December 23 and 26.</p>
 
-Library Staff:
+
+<h3>Summer Hours:</h3>
+<p>Summer hours begin May 27, 2011.</p>
 <ul>
-<li>Stacy Stevens, Director: <a href="mailto:stevens@wvls.lib.wi.us"> stevens@wvls.lib.wi.us</a></li>
-<li>Sandra Lussenhop, Outreach Services to seniors & the homebound: <a href="mailto:sluss@wvls.lib.wi.us">sluss@wvls.lib.wi.us </a> (or call 715-536-7191)</li>
-<li>Don Litzer, Assistant Director, Head of Adult Department: <a href="mailto:dlitzer@wvls.lib.wi.us">dlitzer@wvls.lib.wi.us</a> </li>
-<li>Linda Schuster, Head of Youth Services Department: <a href="mailto:schuster@wvls.lib.wi.us">schuster@wvls.lib.wi.us</a> </li>
-<li>Donna Hertel, Supervisor of Reference and Interlibrary Loan: <a href="mailto:merrillreflib@yahoo.com">merrillreflib@yahoo.com</a></li>
-<li>Eleanor Schwartz, System Administrator, Circulation Coordinator: <a href="mailto:schwartz@wvls.lib.wi.us">schwartz@wvls.lib.wi.us</a></li>
-<li>Susan Bauer, Bookkeeper: <a href="mailto:sbauer@wvls.lib.wi.us">sbauer@wvls.lib.wi.us</a> </li>
-<li>Michael Schroeder, Maintenance Supervisor: <a href="mschroed53@hotmail.com">mschroed53@hotmail.com</a> </li>
+<li><em>Mon - Thurs:</em> 9:30am - 8pm</li>
+<li><em>Friday:</em> 9:30am- 5pm</li>
+<li><em>Saturday:</em> 9:30am - 1pm</li>
+<li><em>Sunday:</em> Closed</li>
+</ul>
+</section> <!-- end hours -->
+
+<section id="contact">
+<h2>Library Staff</h2>
+<ul>
+<li><strong>Director:</strong> Stacy Stevens <a href="mailto:stevens@wvls.lib.wi.us"> stevens@wvls.lib.wi.us</a></li>
+<li><strong>Outreach Services to seniors & the homebound:</strong> Sandra Lussenhop <a href="mailto:sluss@wvls.lib.wi.us">sluss@wvls.lib.wi.us </a> (or call 715-536-7191)</li>
+<li><strong>Asst. Director, Head of Adult Dept:</strong> Don Litzer <a href="mailto:dlitzer@wvls.lib.wi.us">dlitzer@wvls.lib.wi.us</a> </li>
+<li><strong>Head of Youth Services Department:</strong> Linda Schuster <a href="mailto:schuster@wvls.lib.wi.us">schuster@wvls.lib.wi.us</a> </li>
+<li><strong>Supervisor of Reference and Interlibrary Loan:</strong> Donna Hertel <a href="mailto:merrillreflib@yahoo.com">merrillreflib@yahoo.com</a></li>
+<li><strong>System Administrator, Circulation Coordinator:</strong> Eleanor Schwartz <a href="mailto:schwartz@wvls.lib.wi.us">schwartz@wvls.lib.wi.us</a></li>
+<li><strong>Bookkeeper:</strong> Susan Bauer <a href="mailto:sbauer@wvls.lib.wi.us">sbauer@wvls.lib.wi.us</a> </li>
+<li><strong>Maintenance Supervisor:</strong> Michael Schroeder <a href="mschroed53@hotmail.com">mschroed53@hotmail.com</a> </li>
 </ul>
 
 </section> <!-- end contact -->
 
 <section id="directions">
-        <section id="google-map"><iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=T+B+Scott+Free+Library,+106+W+1st+St,+Merrill,+Lincoln,+Wisconsin+54452-2310&amp;oe=utf-8&amp;client=firefox-a&amp;hl=en&amp;ie=UTF8&amp;geocode=Fc5gsQIdiDyn-g&amp;split=0&amp;sll=37.0625,-95.677068&amp;sspn=23.875,57.630033&amp;hq=&amp;hnear=T+B+Scott+Free+Library,+106+W+1st+St,+Merrill,+Wisconsin+54452-2310&amp;ll=45.179072,-89.703283&amp;spn=0.01815,0.025749&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=T+B+Scott+Free+Library,+106+W+1st+St,+Merrill,+Lincoln,+Wisconsin+54452-2310&amp;oe=utf-8&amp;client=firefox-a&amp;hl=en&amp;ie=UTF8&amp;geocode=Fc5gsQIdiDyn-g&amp;split=0&amp;sll=37.0625,-95.677068&amp;sspn=23.875,57.630033&amp;hq=&amp;hnear=T+B+Scott+Free+Library,+106+W+1st+St,+Merrill,+Wisconsin+54452-2310&amp;ll=45.179072,-89.703283&amp;spn=0.01815,0.025749&amp;z=14&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small></section>
-
-
-
-        <section id="address">
-        <p>T.B. Scott Library 106 W. First St.; Merrill, WI 54452</p>
-        </section>
+<h2>Map, Directions, Address</h2>
+        <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?hl=en&amp;ie=UTF8&amp;source=embed&amp;msa=0&amp;msid=210436988596871562822.00049fcf01389331d36d9&amp;ll=45.198248,-89.68689&amp;spn=0.042338,0.072956&amp;z=13&amp;iwloc=lyrftr:m,5706600243674487221,45.181311,-89.702682&amp;output=embed"></iframe><br /><p><small>View <a href="http://maps.google.com/maps/ms?hl=en&amp;ie=UTF8&amp;source=embed&amp;msa=0&amp;msid=210436988596871562822.00049fcf01389331d36d9&amp;ll=45.196434,-89.688091&amp;spn=0.042338,0.072956&amp;z=13&amp;iwloc=lyrftr:m,5706600243674487221,45.181311,-89.702682" style="color:#0000FF;text-align:left">T B Scott Free Library</a> in a larger map</small></p>
+<p>Get directions from wherever you are!</p>
+<form action="http://maps.google.com/maps"  method="get">
+Where are you right now?:
+<input type="text" name="saddr" />
+<input type="hidden" name="daddr" value="106 W. First St., Merrill, WI 54452" />
+<input type="submit" value="Go!" />
+</form>
+<!--
+<h3>Address</h3>
+<p>T.B. Scott Library<br /> 106 W. First St.<br /> Merrill, WI 54452</p>
+-->
       </section> <!-- end directions -->
 
     </div> <!-- end content -->
 </div> <!-- end non-footer -->
 <footer>
-<p>Telephone: (715)536-7191</p>
-<p>Fax: (715)536-1705</p>
-<p>Address: 106 West First Street<br />
-Merill, WI 54452</p>
+<p>Telephone: (715) 536-7191 | Fax: (715) 536-1705</p><br />
+<p>106 West First Street<br />
+Merrill, WI 54452</p>
 </footer>
 
 
