--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </section> <!-- end contact -->
 
 <section id="directions">
-<h2>Map, Directions, Address</h2>
+<h2>Map &amp; Directions</h2>
         <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?hl=en&amp;ie=UTF8&amp;source=embed&amp;msa=0&amp;msid=210436988596871562822.00049fcf01389331d36d9&amp;ll=45.198248,-89.68689&amp;spn=0.042338,0.072956&amp;z=13&amp;iwloc=lyrftr:m,5706600243674487221,45.181311,-89.702682&amp;output=embed"></iframe><br /><p><small>View <a href="http://maps.google.com/maps/ms?hl=en&amp;ie=UTF8&amp;source=embed&amp;msa=0&amp;msid=210436988596871562822.00049fcf01389331d36d9&amp;ll=45.196434,-89.688091&amp;spn=0.042338,0.072956&amp;z=13&amp;iwloc=lyrftr:m,5706600243674487221,45.181311,-89.702682" style="color:#0000FF;text-align:left">T B Scott Free Library</a> in a larger map</small></p>
 <p>Get directions from wherever you are!</p>
 <form action="http://maps.google.com/maps"  method="get">
